--- a/test/control.yaml
+++ b/test/control.yaml
@@ -9,9 +9,14 @@ groups:
     test:
         - testcron
 
+pluginports:
+    - 80
+
 services:
     plugintest:
-        type: plugin
+        type: nginx
+        listen: 80
+        root: www
 
     daemon:
         shell: while true; do date; sleep 10; done
