--- a/test/control.yaml
+++ b/test/control.yaml
@@ -13,10 +13,10 @@ pluginports:
     - 80
 
 services:
-    plugintest:
-        type: nginx
-        listen: 80
-        root: www
+    # plugintest:
+    #     type: nginx
+    #     listen: 80
+    #     root: www
 
     daemon:
         shell: while true; do date; sleep 10; done
